force-app/main/default/objects/copado__MC_Custom_Job_Step__mdt/fields/copado__LWC_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__LWC_Name__c</fullName>
    <description>Name of LWC/Aura component to render while configuring the Custom Job step</description>
    <label>LWC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>