force-app/main/default/objects/copado__MC_Custom_Job_Step__mdt/fields/copado__Platform__c.field-meta.xml
<CustomField>
    <fullName>copado__Platform__c</fullName>
    <description>Platform Name</description>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>